fix: sonar qube warning